063 ==> 233222 : Thumbnails displayed are from incorrect images.
064 ==> 235733 : No possibility to cancel a delete file operation.
065 ==> 267509 : Button to stop collection scan during startup.
066 ==> 223232 : digiKam Does Not Detect the Color Profile in DCF Files.
067 ==> 295340 : digiKam crashed while tagging faces.
068 ==> 278927 : Not all files read.
069 ==> 261879 : Ubuntu unity compatibility bugs: export menu disappeared.
070 ==> 280426 : Exif data from jpegs deleted when using XML sidecars and adding keyword tags.
071 ==> 282903 : Image corrupted after writing metadata due to sidecar XMP.
072 ==> 264204 : Existing XMP sidecar file gets overwritten by digiKam.
073 ==> 273565 : digiKam doesn't read EXIF if XMP sidecar file exists.
074 ==> 296141 : Make digiKam compile on ARM.
075 ==> 277618 : Metadata are incompletely imported from XMP sidecar and Tags are not created.
076 ==> 220545 : Cannot write XMP sidecar files.
077 ==> 279710 : Geo-location coordinates and metadata tags mutual exclusive in xmp sidecar file.
078 ==> 289223 : XMP sidecars not written for M2TS and MTS video files.
079 ==> 290816 : Preview mode shows portrait raws in horizontal when a third party app adds xmp files.
080 ==> 273137 : Make XMP Side Car Files Hidden Or Use Separate Database To Store Them.
081 ==> 252458 : Sort order in SlideShow.
082 ==> 277370 : Unclear licensing for profiles/prophoto.icm and profiles/srgb-d65.icm.
083 ==> 221985 : Update histogram before preview.
084 ==> 208286 : Lock zoom when switching photos : add context menu in preview thumbbar.
085 ==> 182110 : Geolocation tab : add "loc.alize.us" support to the more info web service link.
086 ==> 216636 : Option to set parent album in Album -> New Album.
087 ==> 287099 : digiKam crash when using facerecognition.
088 ==> 151849 : Add Right-MouseButton-menu entry to exit fullscreen [patch].
089 ==> 251887 : Holding SHIFT in timeline to select range. 
090 ==> 

