@@ -106,6 +106,7 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 087 ==> 287099 : digiKam crash when using facerecognition.
 088 ==> 151849 : Add Right-MouseButton-menu entry to exit fullscreen [patch].
 089 ==> 251887 : Holding SHIFT in timeline to select range. 
-090 ==> 
+090 ==> 289330 : Album file watch failing (QKqueueFileSystemWatcherEngine:addPaths: open: Too many open files in system).
+091 ==> 
 
 
